--- a/src/style.css
+++ b/src/style.css
@@ -2,32 +2,24 @@
 
 /*cabecera*/
 .contenedorPrincipal{
-    background-color: rgb(196, 255, 250);
+    background-color: rgb(184, 234, 234);
     padding: 15px;
-    /*float: left;
-    width: 60%;
-    padding: 0 20px;
-    overflow: hidden;*/
+    
 }
-
-input {
-    border: none;
-    outline: none;
-    width: 250px;
-    padding: 12px;
+/*propiedades de la imagenes en tarjetas*/
+.size {
+    width: 30%;
+    height: auto;
     border-radius: 4%;
-    font-family: 'Ubuntu', sans-serif;
 }
 
 #opciones{
     border: none;
     outline: none;
-    padding: 35px;
-    background-color: rgb(187, 211, 120);
-    /*float: left;
-    width: 60%;
-    padding: 0 20px;
-    overflow: hidden;*/
+    /*padding: 35px;*/
+    background-color: rgb(181, 205, 163);
+    padding: 15px;
+    
 }
 
 .selector{
@@ -35,87 +27,83 @@ input {
     padding: 12px;
     width: 250px;
     font-family: 'Ubuntu', sans-serif;
-
-}
-/*barra de navegación principal del sitio*/
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    /*background-color: #333;*/
-    background-color: rgb(187, 211, 120);
-    font-family: 'Ubuntu', sans-serif;
-    /*float: left;
-    width: 60%;
-    padding: 0 20px;
-    overflow: hidden;*/
-}
-
-li {
-    float: left;
-}
-
-li a {
-    display: block;
-    color: rgb(104, 148, 173);
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    /*float: left;
-    width: 60%;
-    padding: 0 20px;
-    overflow: hidden;*/
-}
-
-li a:hover {
-    background-color: #111;
 }
 
 /*main*/
 main{
-    background-image: url(img/pngegg.png);
-    
-    background-repeat: no-repeat;
-    height: 200px;
+    height: 300vh;
     display: flex;
-    /*background-color: rgb(241, 172, 215);*/
-    background-color: rgb(250, 202, 209);
+    background-color: rgb(252, 216, 212);
     font-family: 'Ubuntu', sans-serif;
     padding: 100px;
-    /*float: left;
-    width: 60%;
-    padding: 0 20px;
-    overflow: hidden;*/
+}
+/*CSS en el aside*/
+#tororo {
+    background-repeat: no-repeat;
+    height: 100%;
+    width: 20%;
 }
 
-
-    .flex-container {
-        display: flex;
-        flex-wrap: nowrap;
-        background-color: rgb(250, 202, 209);
-      }
-      
-      .flex-container > div {
-        background-color: #e1f5bd;
-        width: 200px;
-        height: 200px;
-        margin: 10px;
-        text-align: center;
-        line-height: 75px;
-        font-size: 30px;
-      }
-
+/*CSS FOOTER*/
 #piePagina {
     font-family: 'Ubuntu', sans-serif;
-    background-color: rgb(194, 165, 131); 
+    background-color: rgb(193, 172, 149); 
     padding: 5px;  
     text-align: center;
-    /*float: left;
-    width: 60%;
-    padding: 0 20px;
-    overflow: hidden;*/
 }
+
+/*CSS DE LAS TARJETAS*/
+.container{
+    width: 100%;
+    max-width: 1200px;
+    height: 430px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: auto;
+}
+
+.container .card{
+    width: 160px;
+    height: 300px;
+    border-radius: 8px;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+    margin: 20px;
+    padding-top: 3%;
+    text-align: center;
+    transition: all 0.25s;
+    background-color: rgb(185 74 94 / 14%);
+}
+
+.container .card:hover{
+    transform: translateY(-15px);
+    box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
+    background-color: rgb(253, 246, 240); 
+}
+
+.container .card img{
+    width: 100px;
+    height: 150px;
+}
+
+.container .card h4{
+    font-weight: 600;
+}
+
+
+.container .card p{
+    padding: 0 1rem;
+    font-size: 16px;
+    font-weight: 300;
+}
+
+.container .card a {
+    font-weight: 500;
+    text-decoration: none;
+    color: #3498db;
+}
+
 
 
 
