--- a/src/style.css
+++ b/src/style.css
@@ -1,53 +1,58 @@
-body{
+body {
     background-image: url('https://i.pinimg.com/originals/fa/a2/a4/faa2a4a8f25471ccb5e9527eb5c09564.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
 
-.header{
+.header {
     width: 100%;
     height: 6em;
-    background-color: #f21d2fa8;
+    background-color: #d54c4c;
     position: fixed;
-    z-index:10;/*Para que este encima por los demas contenedores*/
-    top:0;
-    left:0;
-    box-shadow:0px 1px 10px rgba(0,0,0,0.4);
+    z-index: 10;
+    /*Para que este encima por los demas contenedores*/
+    top: 0;
+    left: 0;
+    box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.4);
 }
-.container{
+
+.container {
     width: 95%;
     max-width: 1500px;
     margin: auto;
 }
-.logo{
-    float: left; 
-    line-height:10em;
+
+.logo {
+    float: left;
+    line-height: 10em;
 }
 
-#logoImg{
+#logoImg {
     width: 200px;
     left: 300px;
 }
 
-.menu{
+.menu {
     float: right;
     line-height: 50px;
 }
-.menu a{
-    color:blueviolet;
+
+.menu a {
+    color: #ECEFA4;
     text-decoration: none;
     display: inline-block;
     padding: 10px 15px;
     line-height: normal;
     font-size: 14px;
-    transition:all 500ms ease;
+    transition: all 500ms ease;
     border-bottom: 4px solid transparent;
 }
-.menu a:hover{
+
+.menu a:hover {
     color: yellow;
     border-bottom: 4px solid #dfb11a;
 }
-   
-.seleccion{
+
+.seleccion {
     margin-top: 10rem;
 }
