--- a/src/style.css
+++ b/src/style.css
@@ -1,17 +1,18 @@
 body {
     font-family: 'Balsamiq Sans', cursive;
-/*font-family: 'Chakra Petch', sans-serif;*/
+    /*font-family: 'Chakra Petch', sans-serif;*/
     background-image: url('https://i.pinimg.com/originals/fa/a2/a4/faa2a4a8f25471ccb5e9527eb5c09564.jpg');
-    background-repeat: no-repeat; /*repeat*/
+    background-size: cover;/*cubrir todo el espacio con la imagen*/
+    background-repeat: no-repeat; /*fondo no se repita*/
     background-attachment:fixed;/*imagen de nubes quede fija*/
 }
 
 .header {
     width: 100%;
-    height: 6em;
-    background-color: #d54c4c;
+    height: 6.5em;
+    background-color: #f32020cb;
     position: fixed;
-    z-index: 10;
+    /*-index: 10;*/
     /*Para que este encima por los demas contenedores*/
     top: 0;
     left: 0;
@@ -55,6 +56,48 @@ body {
     border-bottom: 4px solid #dfb11a;
 }
 
+/*cambio en titulo2 con id= instructions*/
+
+#instructions{
+    color:#215cd3;
+    text-align: center;
+    
+
+}
+
+
 .seleccion {
     margin-top: 10rem;
+}
+
+/*Contenedor de todos los div pokemon*/
+.containerPokemon{
+    height: 100%;
+    width: 10%;
+    align-items: center;
+   
+   
+}
+/*div contenedores de imagen, número y nombre de los pokémon*/
+.pokeDiv{
+
+    display:inline-block;
+    text-align:center;
+    color:#1748A7;
+}
+/*imágenes de pokémon en pantalla*/
+.pokeImg{
+    display:block;
+    width: 8em;
+    height: 8em;
+    padding:2em 2em 0em 2em;
+    transition: 1s ease-in-out;
+    
+}
+.pokeImg:hover{
+    display:block;
+    
+    padding:2em 2em 0em 2em;
+    filter:drop-shadow 0 0.5em 0.8em -0.2em #c5d86d;
+    filter: drop-shadow(0 4px 7px #0f24e0);
 }
