--- a/src/style.css
+++ b/src/style.css
@@ -9,10 +9,10 @@ body {
 
 .header {
     width: 100%;
-    height: 6.5em;
+    height: 10.5%;
     background-color: #f32020cb;
     position: fixed;
-    /*-index: 10;*/
+    z-index: 1;
     /*Para que este encima por los demas contenedores*/
     top: 0;
     left: 0;
@@ -31,8 +31,8 @@ body {
 }
 
 #logoImg {
-    width: 200px;
-    left: 300px;
+    width: 50%;
+    left: 45%;
 }
 
 .menu {
@@ -56,27 +56,49 @@ body {
     border-bottom: 4px solid #dfb11a;
 }
 
+#main{
+    background-color: blue;
+    position: fixed;
+    align-items: center;
+    width: 100%;
+    height: 22%;
+    /*z-index: 1;*/
+    /*Para que este encima por los demas contenedores*/
+    top: 7em;
+    left: 0;
+}
+    
+
 /*cambio en titulo2 con id= instructions*/
 
 #instructions{
     color:#215cd3;
     text-align: center;
+    padding: 3% 20%;
+    
     
 
 }
 
 
 .seleccion {
-    margin-top: 10rem;
-}
+    width:80%;
+    height: 80%;
+    margin-left: 10%;
+    margin-right: 10%;
+    border-radius:10px;
+    background-color: #40e9a3;
+    /*position: fixed;
+  
+    /*justify-content: center;
+    align-items: center;
+    flex-direction: row;*/
+}/*
 
 /*Contenedor de todos los div pokemon*/
 .containerPokemon{
-    height: 100%;
-    width: 10%;
-    align-items: center;
-   
-   
+  
+   background-color: rgb(26, 46, 46);
 }
 /*div contenedores de imagen, número y nombre de los pokémon*/
 .pokeDiv{
@@ -91,7 +113,7 @@ body {
     width: 8em;
     height: 8em;
     padding:2em 2em 0em 2em;
-    transition: 1s ease-in-out;
+    transition: 0.5s ease-in-out;
     
 }
 .pokeImg:hover{
