--- a/src/style.css
+++ b/src/style.css
@@ -5,6 +5,8 @@ body {
     background-size: cover;/*cubrir todo el espacio con la imagen*/
     background-repeat: no-repeat; /*fondo no se repita*/
     background-attachment:fixed;/*imagen de nubes quede fija*/
+    margin: 0;
+    padding: 0;
 }
 
 .header {
@@ -57,15 +59,16 @@ body {
 }
 
 #main{
-    background-color: blue;
+   /* background-color: blue;*/
     position: fixed;
     align-items: center;
     width: 100%;
     height: 22%;
-    /*z-index: 1;*/
+    z-index: 1;
     /*Para que este encima por los demas contenedores*/
     top: 7em;
     left: 0;
+    margin-bottom: 50px;
 }
     
 
@@ -76,8 +79,6 @@ body {
     text-align: center;
     padding: 3% 20%;
     
-    
-
 }
 
 
@@ -88,38 +89,42 @@ body {
     margin-right: 10%;
     border-radius:10px;
     background-color: #40e9a3;
-    /*position: fixed;
-  
-    /*justify-content: center;
-    align-items: center;
-    flex-direction: row;*/
-}/*
+}
+
 
 /*Contenedor de todos los div pokemon*/
-.containerPokemon{
-  
-   background-color: rgb(26, 46, 46);
+#containerPokemon{
+    left: 0;
+    right: 0;
+    margin-top: 21em;
+    margin-right: 10%;
+    margin-left: 10%;
+    width: 80%;
 }
-/*div contenedores de imagen, número y nombre de los pokémon*/
 .pokeDiv{
-
+   
     display:inline-block;
     text-align:center;
     color:#1748A7;
+    flex-wrap: wrap;
+    width:16%;
+    height:16%;
 }
 /*imágenes de pokémon en pantalla*/
 .pokeImg{
     display:block;
-    width: 8em;
-    height: 8em;
-    padding:2em 2em 0em 2em;
+    align-items: center;
+    padding:1em 1em 0em 1em;
     transition: 0.5s ease-in-out;
+    margin-left:3em ;
+    margin-right: 0;
+    width:60% ;
+    right:60% ;
+
     
 }
+
 .pokeImg:hover{
-    display:block;
-    
-    padding:2em 2em 0em 2em;
     filter:drop-shadow 0 0.5em 0.8em -0.2em #c5d86d;
-    filter: drop-shadow(0 4px 7px #0f24e0);
+    filter: drop-shadow(0 1em .4em #2a2af1);
 }
