--- a/src/style.css
+++ b/src/style.css
@@ -10,107 +10,107 @@ body {
     /*imagen de nubes quede fija*/
     margin: 0;
     padding: 0;
+    line-height: 1.4em;
+}
+p{
+    margin-bottom: 1.6em;
+}
+.container{
+width: 85%;
+max-width: 1800px;
+margin: 0 auto;
 }
 
-.header {
-    width: 100%;
-    height: 10.5%;
+.header{
     background-color: #f32020cb;
+    color: #dfb11a;
+    font-size: 1em;
+    padding: 1em 0;
     position: fixed;
-    z-index: 1;
-    /*Para que este encima por los demas contenedores*/
-    top: 0;
     left: 0;
+    top: 0;
+    right: 0;
     box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.4);
 }
-
-.container {
-    width: 95%;
-    max-width: 1800px;
-    margin: auto;
-}
-
-.logo {
-    float: left;
-    line-height: 10em;
-}
-
-.logoImg {
-    width: 50%;
-    left: 45%;
-}
-
-.menu {
-    float: right;
-    line-height: 50px;
-}
-
-.menu a {
-    color: #ECEFA4;
+.header a{
+    color: #dfb11a;
     text-decoration: none;
-    display: inline-block;
-    padding: 10px 15px;
-    line-height: normal;
-    font-size: 14px;
-    transition: all 500ms ease;
-    border-bottom: 4px solid transparent;
-}
+    
 
-.menu a:hover {
-    color: yellow;
-    border-bottom: 4px solid #dfb11a;
 }
-
-.main{
-   /* background-color: blue;*/
-    position: fixed;
+.logo-nav-container{
+    display: flex;
+    justify-content: space-around;
     align-items: center;
-    width: 100%;
-    height: 22%;
-    z-index: 1;
-    /*Para que este encima por los demas contenedores*/
-    top: 7em;
-    left: 0;
-    margin-bottom: 50px;
+    flex-wrap:wrap;
 }
-
-
-/*cambio en titulo2 con id= instructions*/
-
-.instructions{
-    color:#215cd3;
-    text-align: center;
-    padding: 3% 20%;
+.logoImg{
+    width:15em;
+    height: auto;
 }
-
-.seleccion {
-    width: 80%;
-    height: 80%;
-    margin-left: 10%;
-    margin-right: 10%;
-    border-radius: 10px;
-    background-color: #40e9a3;
+.menu-icon{
+    display:none;
 }
+.navigation ul{
+    margin-top:0;
+    margin-bottom:0;
+    margin-left: 8em;
+    margin-right: 2em;
+    padding:0;
+    list-style:none;
+}
+    .navigation ul li{
+        display:inline-block;
+    }
+
+    .navigation ul li a{
+        display:block;
+        padding: 0.5rem 1rem;
+        transition:all 0.4s linear;
+    }
+        .navigation ul li a:hover{
+            background-color: #e00d0d;
+            border-radius: 10px;
+            color: #f0c73f;
+        }
+    .navigation ul li div{
+        display:block;
+        padding: 0.5rem 1rem;
+        transition:all 0.4s linear;
+    }
+        .navigation ul li div:hover{
+        background-color: #e00d0d;
+        border-radius: 10px;
+        color: #f0c73f;
+    }
 
 
 /*Contenedor de todos los div pokemon*/
-
+main{
+    margin-top:10em ;
+}
 #containerPokemon {
     left: 0;
     right: 0;
-    margin-top: 21em;
+    /*margin-top: 21em;*/
     margin-right: 10%;
     margin-left: 10%;
     width: 80%;
+    background-color: #40e9a3;
 }
 
 .pokeDiv {
+    background-color: #dfb11a;
     display: inline-block;
     text-align: center;
     color: #1748A7;
     flex-wrap: wrap;
     width: 16%;
-    height: 16%;
+    height: 10%;
+}
+
+.pokeInfo{
+    background-color: beige;
 }
 
 
@@ -130,4 +130,57 @@ body {
 .pokeImg:hover {
     filter: drop-shadow 0 0.5em 0.8em -0.2em #c5d86d;
     filter: drop-shadow(0 1em .4em #2a2af1);
+}
+.footer{
+    background-color: #f32020cb;
+    color:#f0c73f;
+    padding: 1em 0;
+    text-align: center;
+}
+@media only screen and(max-width:767px){
+    .menu-icon{
+        display:block;
+        cursor:pointer;
+        padding:0.5rem 1rem;
+    }
+ /*   
+.logoImg{
+    width:6em;
+    height: auto;
+}*/
+
+.navigation{
+    width:100%;
+}
+ 
+.navigation ul{
+display: none;
+}
+.navigation ul.show{
+    display:none;
+}
+    .navigation ul li{
+        display:block;
+    }
+/*
+    .navigation ul li a{
+        display:block;
+        padding: 0.5rem 1rem;
+        transition:all 0.4s linear;
+    }*/
+        .navigation ul li a:hover{
+            background-color: #e00d0d;
+            border-radius: 10px;
+            color: #f0c73f;
+        }
+    .navigation ul li div{
+        display:block;
+        padding: 0.5rem 1rem;
+        transition:all 0.4s linear;
+    }
+        .navigation ul li div:hover{
+        background-color: #e00d0d;
+        border-radius: 10px;
+        color: #f0c73f;
+    }
 }
