--- a/src/style.css
+++ b/src/style.css
@@ -100,7 +100,7 @@ select {
 #containerPokemon {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content:center;
     width: 80%;
     margin: auto;
     margin-top: 10em;
@@ -146,7 +146,6 @@ div.pokeDiv {
     margin: 0;
     margin-top: 0.5em;
     padding: 0 1rem;
-    ;
     color: rgb(23, 180, 241);
     font-size: 13px;
 }
@@ -161,14 +160,13 @@ div.pokeDiv {
 
 /*imágenes de pokémon en pantalla*/
 
-img.pokeImg {
-    justify-content: space-between;
+.pokeImg {
     padding: 25px;
     transition: 0.5s ease-in-out;
     width: 150px;
     max-width: 150px;
     height: 150px;
-    align-items: center;
+ 
 }
 
 .pokeImg:hover {
@@ -203,7 +201,12 @@ img.pokeImg {
     .menu-icon img {
         width: 50px;
         height: auto;
+     
+        transition: all 0.4s linear;
+    }
+    .menu-icon img:hover{
         transform: rotate(-180deg);
+        transition: all 0.9s ease-in-out;
     }
     .navigation {
         width: 100%;
@@ -230,20 +233,4 @@ img.pokeImg {
         transition: all 0.4s linear;
         border-radius: 5px;
     }
-    /*
-        .navigation ul li a:hover{
-            background-color: #e00d0d;
-            border-radius: 10px;
-            color: #f0c73f;
-        }
-    .navigation ul li div{
-        display:block;
-        padding: 0.5rem 1rem;
-        transition:all 0.4s linear;
-    }
-        .navigation ul li div:hover{
-        background-color: #e00d0d;
-        border-radius: 10px;
-        color: #f0c73f;
-    }*/
 }
