--- a/src/style.css
+++ b/src/style.css
@@ -29,3 +29,9 @@ position: relative;
     overflow: hidden;
     border-radius: 10px;
 }
+
+.container {
+    width:fit-content ;
+    margin: auto;
+
+}
