--- a/src/style.css
+++ b/src/style.css
@@ -38,7 +38,7 @@ H1 {
 }
 .pokedex {
     background: crimson;
-    width: 94%;
+    width: 85%;
     height: auto;
     max-width: 1500px;
     top: 50px;
@@ -61,7 +61,7 @@ H1 {
     border-radius: 5px;
     align-content: center;
 }
-#Srarity{
+#rarity{
     color: rgb(255, 251, 0);
     background: rgb(19, 63, 121);
     border:oldlace;
@@ -83,14 +83,17 @@ H1 {
     border: 2px solid black;
     border-radius: 5px;
 }
+.card{
+
+}
 .box {
     background: black;
     position: relative;
     top: 65px;
-    width: calc(360px - 60px);
-    height: calc(320px - 30px);
-    float:left;
-    margin: 30px;
+    width: 250px;
+    height: 270px;
+    float: left ;
+    margin: 9.5px;
     box-sizing: border-box;
     overflow: hidden;
     border-radius: 10px;
@@ -101,6 +104,7 @@ H1 {
     text-align: center;
     font-size: 14px;
 }
+
 .footer{
     background: crimson;
     width: 94%;
