--- a/src/style.css
+++ b/src/style.css
@@ -12,17 +12,7 @@ body {
     flex-direction: row;
     flex-wrap: wrap;
     }
- /*  .container{
-    width: 90%;
-    max-width: 1500px;
-    box-sizing: border-box; 
-    margin: auto;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    
-   
-  } */
+
 
 header {
   background-color:#21212c;
@@ -50,8 +40,7 @@ header {
 
 }
  #root{
-   /*  display: flex;
-    flex-flow: row wrap; */
+  
     box-sizing: border-box;
     height: auto;
     display: flex;
@@ -78,9 +67,8 @@ label{
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content:space-evenly;
+ justify-content: center;
   padding: 20px 0px 20px;
-
 
 }
 
@@ -94,6 +82,7 @@ label{
     color:black; 
     outline:rgb(7, 7, 7); 
     width: 10%;
+    margin-left: 20px;
     
 }
 select:hover{
@@ -102,7 +91,34 @@ select:hover{
 
 } 
 
+#input{
+  border-radius: 0.5rem; 
+    background-color: rgb(166, 231, 152);
+    padding: 0.2rem;  
+    font-size: 20px;
+    color:black;  
+    width: 15%;
+    
+    margin-left: 100px;
 
+}
+#button{
+  border-radius: 0.5rem; 
+    background-color: rgb(135, 243, 28);
+    padding: 0.2rem;  
+    font-size: 20px;
+    font-weight: bold;
+    color:black; 
+    outline:rgb(7, 7, 7); 
+    width: 8%;
+    margin-left: 20px;
+
+}
+button:hover{
+  background-color:rgb(182, 241, 43);
+  box-shadow: 0px 0px 15px rgb(66, 163, 219);
+
+} 
 
 main{
   flex: 100%;
@@ -183,9 +199,26 @@ h3 {
   select {
     border-radius: 0.5rem; 
     padding: 0.2rem;  
-    font-size: 15px;
-    width: 45%;
+    font-size: 10px;
+    width: 35%;
     
+    
+}
+#input{
+  border-radius: 0.5rem; 
+    padding: 0.2rem;  
+    font-size: 10px;
+    width: 25%;
+  
+
+}
+#button{
+  border-radius: 0.5rem; 
+  padding: 0.2rem;  
+  font-size: 10px;
+  width: 15%;
+  
+
 }
 }
   
