--- a/src/style.css
+++ b/src/style.css
@@ -1,109 +1,169 @@
+* {
+  box-sizing: border-box;
+}
 body {
-    background-image: url(imagenes/paisaje_fondo.png);
-    background-position: center;
-    background-size: center;
-    background-attachment: fixed;
-    background-size: cover;
-    background-repeat: no-repeat;
-    margin: 0;
-    height: 100vh;
-}
-#LogoPokemon {
-    position: relative;
-    top: 30px;
-    left: 540px;
-}
-#Pikachu {
-    position: relative;
-    top: 40px;
-    right: 80px;
-}
-#GO {
-    position: relative;
-    top: 25px;
-    left: 460px;
-}
-H1 {
-    color: white;
-    font-family: sans-serif;
-    font-size: 22px;
-    text-align: center;
-    top: 1px;
-    font-weight:normal;
-    text-shadow: 3px  0px 0px rgb(11, 48, 116),
-               0px  2px 0px rgb(11, 48, 116),
-              -2px  0px 0px rgb(11, 48, 116),
-               0px -2px 0px rgb(11, 48, 116);
-    align-content: center;
+  background-image: url(imagenes/paisaje_fondo.png);
+  background-attachment: fixed;
+  background-size: center;
+  background-repeat: no-repeat;
+  margin: 0;
+  padding: 0;
 }
 .pokedex {
-    background: crimson;
-    width: 85%;
-    height: auto;
-    max-width: 1500px;
-    top: 50px;
-    margin: 5px auto;
-    padding: 10px;
-    position: relative;
-    border: 4px solid black;
-    border-radius: 5px;
-    align-content: center;
+  background: crimson;
+  display: flex;
+  height: 210px;
+  width: 100%;
+  position: relative;
+  justify-content: space-around;
+  align-items: center;
 }
-#types{
-    color: yellow;
-    background: rgb(19, 63, 121);
-    border:oldlace;
-    height: 30px;
-    font-size: 18px;
-    text-align: center;
-    letter-spacing: 0.11em;
-    border: 2px solid black;
-    border-radius: 5px;
-    align-content: center;
+.logoImagenes {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
 }
-#rarity{
-    color: rgb(255, 251, 0);
-    background: rgb(19, 63, 121);
-    border:oldlace;
-    height: 30px;
-    font-size: 18px;
-    text-align: center;
-    letter-spacing: 0.11em;
-    border: 2px solid black;
-    border-radius: 5px;
+.selects {
+  background: crimson;
+  align-items: center;
+  display: flex;
+  height: 70px;
+  width: 100%;
+  justify-content: space-evenly;
+  /* align-items: center;
+  justify-content: space-around;
+  height: 90px;
+  max-width: 1500px;
+  top: 57px;
+  margin: 5px auto;
+  padding: 10px;
+  position: relative; */
 }
-#Sorder{
-    color: yellow;
-    background: rgb(19, 63, 121);
-    border:oldlace;
-    height: 30px;
-    font-size: 18px;
-    text-align: center;
-    letter-spacing: 0.11em;
-    border: 2px solid black;
-    border-radius: 5px;
+#texto {
+  background: crimson;
+  display: flex;
+  height: 65px;
+  justify-content: space-evenly;
+  border: 0.5px solid oldlace;
+  /* border: 2px solid oldlace; */
 }
+H1 {
+  color: white;
+  font-family: “Encode Sans”, sans-serif;
+  font-size: 24px;
+  text-align: center;
+  font-weight: normal;
+  text-shadow: 3px 0px 0px rgb(11, 48, 116), 0px 2px 0px rgb(11, 48, 116),
+    -2px 0px 0px rgb(11, 48, 116), 0px -2px 0px rgb(11, 48, 116);
+  position: relative;
+}
+#types {
+  color: yellow;
+  background: rgb(19, 63, 121);
+  border: oldlace;
+  height: 30px;
+  width: 143px;
+  font-size: 18px;
+  text-align: center;
+  letter-spacing: 0.11em;
+  border-radius: 5px;
+  border: 2px solid oldlace;
+  box-shadow: 1px 2px 1px black;
+  position: relative;
+}
+#generation {
+  color: rgb(255, 251, 0);
+  background: rgb(19, 63, 121);
+  border: oldlace;
+  height: 30px;
+  width: 180px;
+  font-size: 18px;
+  text-align: center;
+  letter-spacing: 0.11em;
+  border: 2px solid oldlace;
+  border-radius: 5px;
+  box-shadow: 1px 2px 1px black;
+  position: relative;
+}
+#order {
+  color: yellow;
+  background: rgb(19, 63, 121);
+  border: oldlace;
+  height: 30px;
+  width: 100px;
+  font-size: 18px;
+  text-align: center;
+  letter-spacing: 0.11em;
+  border: 2px solid oldlace;
+  border-radius: 5px;
+  box-shadow: 1px 2px 1px black;
+  position: relative;
+}
+#reset {
+  color: yellow;
+  background: rgb(19, 63, 121);
+  border: oldlace;
+  height: 30px;
+  width: 230px;
+  font-size: 18px;
+  text-align: center;
+  letter-spacing: 0.11em;
+  border: 2px solid oldlace;
+  border-radius: 5px;
+  box-shadow: 1px 2px 1px black;
+  position: relative;
+}
+
 .box {
-    background: black;
-    position: relative;
-    top: 65px;
-    width: 250px;
-    height: 270px;
-    float: left ;
-    margin: 9.5px;
-    box-sizing: border-box;
-    overflow: hidden;
-    border-radius: 10px;
-    border: 3px solid cornsilk;
-    align-content:space-between;
-    color: #26ca26;
-    font-family: 'Courier New', Courier, monospace;
-    text-align: center;
-    font-size: 14px;
+  float: left;
+  top: 65px;
+  margin: 10px;
+  /* margin-right: 10px;
+  position: relative;
+  margin-left: 15px; */
+  height: 330px;
+  width: 212px;
+  border-radius: 11px;
+  background: black;
+  border: 3px solid cornsilk;
+  font-family: “Encode Sans”, sans-serif;
+  color: #26ca26;
+  text-align: center;
+  font-size: 18px;
 }
-.footer{
-    background: crimson;
-    width: 94%;
-    height: 40px;
-    position:relative;
+.box:hover {
+  background-color: rgb(223, 223, 235);
+  color: black;
+  transform: scale(1.03);
+  transition: all 1s ease;
+}
+
+/*.box {
+  position: relative;
+  top: 65px;
+  width: 250px;
+  height: 270px;
+  margin: 9.5px;
+  background: black;
+  border-radius: 10px;
+  border: 3px solid cornsilk;
+  font-family: "Encode Sans", sans-serif;
+  color: #26ca26;
+  text-align: center;
+  font-size: 14px;
+  overflow: hidden;
+}*/
+footer{
+  display:flex;
+  align-items: flex-end;
+  background-color: crimson;
+  width: 100%;
+
+  color: cornsilk;
+  font-family: “Encode Sans”, sans-serif;
+  text-align: center;
+  font-size: 20px;
+  
+
+
 }
